Terms & Conditions and licenses manage by admin
